SEPT: Bugfix language-picker z-index

--- a/css/_language-picker.scss
+++ b/css/_language-picker.scss
@@ -72,7 +72,6 @@
     height: 100%; //was 42px
     padding: 12px;
     width: 100%;
-    z-index: 2;
     box-sizing: content-box;
 
     &[aria-expanded="true"] + .language-picker__chevron::after {
